--- a/Product_details_page.html
+++ b/Product_details_page.html
@@ -128,33 +128,56 @@
             </div>
             <div id="product_details_page_tab_div3">
                 <div id="product_details_page_tab_div3_img">
-                    <img src="./images/Product-details-page/first_block/Frame 10.svg" alt="">
+                    <img src="./images/Product-details-page/first_block/Frame 14.svg" alt="">
                 </div>
                 <div>
                     <div id="product_details_page_tab_div3_p1">
-                        <p>產品口味</p>
+                        <p>摩卡巧克力</p>
                     </div>
                     <div id="product_details_page_tab_div3_2">
-                        <p>介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹
-                            介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹
-                            介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹
-                        </p>
+                        <div id="product_details_page_tab_div3_2_p_box1">
+                            <p class="tardBox">選至高品質可可 </p>
+                            <p class="mainBox">精選優質可可豆，確保巧克力的純正口感和豐富風味。</p>
+                            <p class="mainBox">可可的苦甜味道與咖啡的香氣相輔相成，形成獨特的味覺體驗。</p>
+                        </div>
+                        <div id="product_details_page_tab_div3_2_p_box2">
+                            <p class="tardBox">濃縮咖啡</p>
+                            <p class="mainBox">使用新鮮研磨的咖啡豆，經過精心提煉，保留了咖啡的濃烈香氣和風味。</p>
+                            <p class="mainBox">濃縮咖啡的添加，讓巧克力在口中釋放出層次豐富的風味。</p>
+                        </div>
+                        <div id="product_details_page_tab_div3_2_p_box3">
+                            <p class="tardBox">天然成分</p>
+                            <p class="mainBox">無人工添加劑，確保每一口巧克力的健康與安全。</p>
+                            <p class="mainBox">使用天然香料增強風味，讓產品更具吸引力。</p>
+                        </div>
                     </div>
                 </div>
             </div>
             <div id="product_details_page_tab_div4">
                 <div id="product_details_page_tab_div4_div1">
                     <div>
-                        <p id="product_details_page_tab_div4_div1_p">產品口味</p>
+                        <p id="product_details_page_tab_div4_div1_p">海鹽焦糖巧克力</p>
                         <div id="product_details_page_tab_div4_div2">
-                            <p id="product_details_page_tab_div4_div2_p">介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹
-                                介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹
-                                介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹
-                            </p>
+                            <div id="product_details_page_tab_div3_2_p_box1">
+                                <p class="tardBox">選至高品質可可 </p>
+                                <p class="mainBox"> 選用優質可可豆，保證巧克力的純正風味和細膩口感。</p>
+                                <p class="mainBox">可可的苦甜與焦糖的甜味相得益彰，形成完美的平衡。</p>
+                            </div>
+                            <div id="product_details_page_tab_div3_2_p_box2">
+                                <p class="tardBox">手工製作焦糖</p>
+                                <p class="mainBox">每一塊海鹽焦糖巧克力中的焦糖均為手工製作，經過精心熬煮</p>
+                                <p class="mainBox">確保焦糖的香氣和口感達到最佳狀態。</p>
+                                <p class="mainBox">焦糖的香甜味道在口中融化，令人陶醉。</p>
+                            </div>
+                            <div id="product_details_page_tab_div3_2_p_box3">
+                                <p class="tardBox">天然海鹽</p>
+                                <p class="mainBox">使用天然海鹽，為巧克力增添一抹鹹味，提升整體風味層次。</p>
+                                <p class="mainBox">海鹽的清新口感與甜蜜的焦糖形成鮮明對比，讓每一口都充滿驚喜。</p>
+                            </div>
                         </div>
                     </div>
                     <div id="product_details_page_tab_div4_img">
-                        <img src="./images/Product-details-page/first_block/Frame 10.svg" alt="">
+                        <img src="./images/Product-details-page/first_block/Frame 15.svg" alt="">
                     </div>
                 </div>
             </div>
