--- a/shopping_cart_two.html
+++ b/shopping_cart_two.html
@@ -44,7 +44,7 @@
                                 <div id="full_list_box_left_box1_content_class1">
                                     <div class="full_list_box_left_box1_content_text">
                                         <p class="full_list_box_left_box1_content_text_special">*</p>
-                                        <p>姓名</p>
+                                        <p class="classusename">姓名</p>
                                     </div>
                                     <div>
                                         <input type="text" placeholder="例:王大明"
@@ -54,7 +54,7 @@
                                 <div id="full_list_box_left_box1_content_class2">
                                     <div class="full_list_box_left_box1_content_text">
                                         <p class="full_list_box_left_box1_content_text_special">*</p>
-                                        <p>姓名</p>
+                                        <p class="classusename">電話</p>
                                     </div>
                                     <div>
                                         <input type="text" placeholder="例:0912345678"
@@ -66,7 +66,7 @@
                                 <div id="full_list_box_left_box1_content_class3">
                                     <div class="full_list_box_left_box1_content_text">
                                         <p class="full_list_box_left_box1_content_text_special">*</p>
-                                        <p>電子信箱</p>
+                                        <p class="classusename">電子信箱</p>
                                     </div>
                                     <div>
                                         <input type="text" placeholder="123@email"
@@ -78,7 +78,7 @@
                                 <div id="full_list_box_left_box1_content_class3">
                                     <div class="full_list_box_left_box1_content_text">
                                         <p class="full_list_box_left_box1_content_text_special">*</p>
-                                        <p>地址</p>
+                                        <p class="classusename">地址</p>
                                     </div>
                                     <div>
                                         <input type="text" placeholder="例:台北市大同區中正路56號1巷..."
@@ -88,9 +88,9 @@
                             </div>
                             <div id="full_list_box_left_box1_content_p5">
                                 <div id="full_list_box_left_box1_content_p5_box">
-                                    <p>已經有會員?</p>
+                                    <p class="classusename">已經有會員?</p>
                                     <p class="full_list_box_left_box1_content_p5_box_p">會員登入 </p>
-                                    <p>或</p>
+                                    <p class="classusename">或</p>
                                     <p class="full_list_box_left_box1_content_p5_box_p">會員註冊</p>
                                 </div>
                             </div>
@@ -103,25 +103,25 @@
                             </div>
                             <div id="full_list_box_left_box2_input1">
                                 <input type="radio" name="recipient" id="orderer_information">
-                                <label for="orderer_information">同訂購人資訊</label>
+                                <label for="orderer_information" class="classusename">同訂購人資訊</label>
                             </div>
                             <div id="full_list_box_left_box2_input2">
                                 <input type="radio" name="recipient" id="new_information">
-                                <label for="new_information">填寫新資訊</label>
+                                <label for="new_information" class="classusename">填寫新資訊</label>
                             </div>
                             <div id="Data_filling_block">
                                 <div id="Data_filling_block_box">
                                     <div>
                                         <div id="Data_filling_block_box1_text1">
                                             <p id="Data_filling_block_box1_text1_text_special">*</p>
-                                            <p>姓名</p>
+                                            <p class="classusename">姓名</p>
                                         </div>
                                         <input type="text" placeholder="例:王大明" id="Data_filling_block_box_input1">
                                     </div>
                                     <div>
                                         <div id="Data_filling_block_box1_text2">
                                             <p id="Data_filling_block_box1_text2_text_special">*</p>
-                                            <p>電子信箱</p>
+                                            <p class="classusename">電子信箱</p>
                                         </div>
                                         <input type="text" placeholder="123@email" id="Data_filling_block_box_input2">
                                     </div>
@@ -130,7 +130,7 @@
                                     <div>
                                         <div id="Data_filling_block_box2_text">
                                             <p id="Data_filling_block_box2_text_special">*</p>
-                                            <p>聯絡電話</p>
+                                            <p class="classusename">聯絡電話</p>
                                         </div>
                                         <input type="text" placeholder="例:0912345678"
                                             id="Data_filling_block_box_input3">
@@ -140,7 +140,7 @@
                                     <div>
                                         <div id="Data_filling_block_box3_text">
                                             <p id="Data_filling_block_box3_text_special">*</p>
-                                            <p>地址</p>
+                                            <p class="classusename">地址</p>
                                         </div>
                                         <input type="text" placeholder="例:台北市大同區中正路56號1巷..."
                                             id="Data_filling_block_box_input4">
@@ -151,7 +151,7 @@
                             </div>
                             <div id="full_list_box_left_box2_input3">
                                 <input type="radio" name="recipient" id="gift_giving">
-                                <label for="gift_giving">線上送禮 <img src="./images/shopping_cart_two/hint.svg"
+                                <label for="gift_giving" class="classusename">線上送禮 <img src="./images/shopping_cart_two/hint.svg"
                                         alt=""></label>
                             </div>
                         </div>
@@ -159,17 +159,17 @@
                     <div id="full_list_box_left_box3">
                         <div id="full_list_box_left_box3_div">
                             <div id="full_list_box_left_box3_div_payment">
-                                <p>付款方式</p>
+                                <p id="cashuseer">付款方式</p>
                             </div>
                             <div id="full_list_box_left_box3_div_box">
                                 <div id="full_list_box_left_box3_divcredit_card">
                                     <input type="radio" name="divcredit_card" id="Online_payment">
-                                    <label for="Online_payment">線上支付</label>
+                                    <label for="Online_payment" class="classusename">線上支付</label>
                                     <img src="./images/shopping_cart_two/credit_card.svg" alt="">
                                 </div>
                                 <div id="full_list_box_left_box3_divcredit_card_cash_on_delivery">
                                     <input type="radio" name="divcredit_card" id="pick_up">
-                                    <label for="pick_up">到店取貨</label>
+                                    <label for="pick_up" class="classusename">到店取貨</label>
                                 </div>
                             </div>
                         </div>
@@ -177,7 +177,7 @@
                     <div id="full_list_box_left_box4">
                         <div id="full_list_box_left_box4_div">
                             <div id="full_list_box_left_box4_transport">
-                                <p>運送方式 (宅配)</p>
+                                <p id="useofter">運送方式 (宅配)</p>
                             </div>
                             <div id="full_list_box_left_box4_box1">
                                 <div id="full_list_box_left_box4_calendar">
@@ -187,7 +187,7 @@
                                 <div id="full_list_box_left_box4_box2">
                                     <div id="full_list_box_left_box4_box_date">
                                         <div>
-                                            <p>希望的配送日期</p>
+                                            <p class="classusename">希望的配送日期</p>
                                         </div>
                                         <div>
                                             <input type="text" placeholder="">
@@ -196,15 +196,15 @@
                                     </div>
                                     <div id="full_list_box_left_box4_box_shipping_time">
                                         <div>
-                                            <p>希望的配送時段</p>
+                                            <p class="classusename">希望的配送時段</p>
                                         </div>
                                         <div id="full_list_box_left_box4_box_date_input">
                                             <input type="radio" name="shipping_time" id="out_time1">
-                                            <label for="out_time1">13點前</label>
+                                            <label for="out_time1" class="classusename">13點前</label>
                                             <input type="radio" name="shipping_time" id="out_time2">
-                                            <label for="out_time2">14~18點</label>
+                                            <label for="out_time2" class="classusename">14~18點</label>
                                             <input type="radio" name="shipping_time" id="out_time3">
-                                            <label for="out_time3">不指定</label>
+                                            <label for="out_time3" class="classusename">不指定</label>
                                         </div>
                                     </div>
                                 </div>
@@ -221,12 +221,12 @@
                         <div id="full_list_box_right_order_box">
                             <img src="./images/shopping_cart_two/Display_diagram.svg" alt="">
                             <div id="full_list_box_right_order_box_p">
-                                <p>客製巧克力禮盒</p>
-                                <p>NT.2500</p>
-                                <p>板狀巧克力 *1</p>
-                                <p>小巧克力 *3</p>
-                                <p>禮盒 *1</p>
-                                <p>卡片 *1</p>
+                                <p class="chbox1">客製巧克力禮盒</p>
+                                <p class="chbox1">NT.2500</p>
+                                <p class="chbox2">板狀巧克力 *1</p>
+                                <p class="chbox2">小巧克力 *3</p>
+                                <p class="chbox2">禮盒 *1</p>
+                                <p class="chbox2">卡片 *1</p>
                             </div>
                             <div id="full_list_box_right_order_box_butbox">
                                 <div id="full_list_box_right_order_box_but1_div">
@@ -250,7 +250,7 @@
                     <div id="full_list_box_right_box3">
                         <div id="full_list_box_right_box3_divbox">
                             <div id="full_list_box_right_box3_divbox_p1">
-                                <p>板狀巧克力</p>
+                                <p class="oder">板狀巧克力</p>
                                 <img src="./images/shopping_cart_two/down.svg" alt="">
                             </div>
                             <div id="full_list_box_right_box3_divbox_p1_box_details_">
@@ -289,7 +289,7 @@
                             </div>
                         </div>
                         <div id="full_list_box_right_box3_divbox_p2">
-                            <p>小巧克力</p>
+                            <p class="oder">小巧克力</p>
                             <img src="./images/shopping_cart_two/down.svg" alt="">
                         </div>
                         <div id="full_list_box_right_box3_divbox_p2_box_details_">
@@ -328,7 +328,7 @@
                         </div>
                     </div>
                     <div id="full_list_box_right_box3_divbox_p3">
-                        <p>禮盒</p>
+                        <p class="oder">禮盒</p>
                         <img src="./images/shopping_cart_two/down.svg" alt="">
                     </div>
                     <div id="full_list_box_right_box3_divbox_p3_box_details_">
@@ -362,7 +362,7 @@
                         </div>
                     </div>
                     <div id="full_list_box_right_box3_divbox_p4">
-                        <p>卡片</p>
+                        <p class="oder">卡片</p>
                         <img src="./images/shopping_cart_two/down.svg" alt="">
                     </div>
                     <div id="full_list_box_right_box3_divbox_p4_box_details_">
@@ -389,12 +389,12 @@
                 <div id="full_list_box_right_order_box">
                     <img src="./images/shopping_cart_two/Display_diagram.svg" alt="">
                     <div id="full_list_box_right_order_box_p">
-                        <p>客製巧克力禮盒</p>
-                        <p>NT.2500</p>
-                        <p>板狀巧克力 *1</p>
-                        <p>小巧克力 *3</p>
-                        <p>禮盒 *1</p>
-                        <p>卡片 *1</p>
+                        <p class="chbox1">客製巧克力禮盒</p>
+                        <p class="chbox1">NT.2500</p>
+                        <p class="chbox2">板狀巧克力 *1</p>
+                        <p class="chbox2">小巧克力 *3</p>
+                        <p class="chbox2">禮盒 *1</p>
+                        <p class="chbox2">卡片 *1</p>
                     </div>
                     <div id="full_list_box_right_order_box_butbox">
                         <div id="full_list_box_right_order_box_but1_div">
@@ -421,19 +421,19 @@
                 <div id="full_list_box_right_box4">
                     <div id="full_list_box_right_box3_divbox">
                         <div id="full_list_box_right_box3_divbox_p1">
-                            <p>板狀巧克力</p>
+                            <p class="oder">板狀巧克力</p>
                             <img src="./images/shopping_cart_two/down.svg" alt="">
                         </div>
                         <div id="full_list_box_right_box3_divbox_p2">
-                            <p>小巧克力</p>
+                            <p class="oder">小巧克力</p>
                             <img src="./images/shopping_cart_two/down.svg" alt="">
                         </div>
                         <div id="full_list_box_right_box3_divbox_p3">
-                            <p>禮盒</p>
+                            <p class="oder">禮盒</p>
                             <img src="./images/shopping_cart_two/down.svg" alt="">
                         </div>
                         <div id="full_list_box_right_box3_divbox_p4">
-                            <p>卡片</p>
+                            <p class="oder">卡片</p>
                             <img src="./images/shopping_cart_two/down.svg" alt="">
                         </div>
                     </div>
