--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </section>
         <section id="QUALITY">
             <div class="pic_box">
-                <div class="quality_title">QUALITY</div>
+                <div class="quality_title" id="quality"></div>
             </div>
         </section>
         <section id="INGREDIENT">
