--- a/index_noUse.html
+++ b/index_noUse.html
@@ -114,7 +114,7 @@
         </section>
         <section id="QUALITY">
             <div class="pic_box">
-                <div class="quality_title">QUALITY</div>
+                <div class="quality_title" id="quality">QUALITY</div>
             </div>
         </section>
         <section id="INGREDIENT">
