--- a/News_shopingcar_Login/News.html
+++ b/News_shopingcar_Login/News.html
@@ -25,7 +25,7 @@
 
     <main class="main">
         <header class="title">
-            <img src="../imge/Rectangle.png" alt="" class="rectangle">
+            <img src="./imge/Rectangle.png" alt="" class="rectangle">
             <h1>NEWS</h1>
             <h3>最新消息</h3>
         </header>
@@ -33,7 +33,7 @@
             <section class="news_box">
                 <section class="news">
                     <div class="news_img">
-                        <img src="../imge/門市開幕.png" alt="">
+                        <img src="./imge/門市開幕.png" alt="">
                         <div class="opening">
                             <h2>門市開幕</h2>
                             <p>2024.9.20</p>
@@ -46,7 +46,7 @@
                 <aside class="box__list">
                     <a href="#">
                         <div class="content">
-                            <img src="../imge/新品上市.png" alt="">
+                            <img src="./imge/新品上市.png" alt="">
                             <p class="date">2024.11.20</p>
                             <p class="font">新品上市</h3>
                                 <!-- <p>巧克力的世界無限可能。無論您是熱愛經典的黑巧克力，
@@ -56,7 +56,7 @@
 
                     <a href="#">
                         <div class="content">
-                            <img src="../imge/聖誕節.png" alt="">
+                            <img src="./imge/聖誕節.png" alt="">
                             <p class="date">2024.12.20</p>
                             <p class="font">耶誕限定商品來囉</h3>
 
@@ -67,7 +67,7 @@
 
                     <a href="#">
                         <div class="content">
-                            <img src="../imge/新年.png" alt="">
+                            <img src="./imge/新年.png" alt="">
                             <p class="date">2025.1.1</p>
                             <p class="font">新年優惠活動</h3>
 
