0909Chocolate_custom_screen1

--- a/shopping_cart_two.html
+++ b/shopping_cart_two.html
@@ -190,7 +190,7 @@
                                             <p class="classusename">希望的配送日期</p>
                                         </div>
                                         <div>
-                                            <input type="text" placeholder="">
+                                            <input type="text" placeholder="" id="full_list_box_left_box4_box_date_day">
                                             <!-- <input type="date" placeholder=""> -->
                                         </div>
                                     </div>
