0909Chocolate_custom_screen2

--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -120,7 +120,7 @@
                         </div>
                     </div>
                     <div id="Checkout_area_hr">
-                        <img src="./images/shopping_cart/hr.svg" alt="">
+                        <!-- <img src="./images/shopping_cart/hr.svg" alt=""> -->
                     </div>
                     <div id="Checkout_area_Subtotal">
                         <div id="Checkout_area_Subtotal_div">
@@ -130,7 +130,7 @@
                         </div>
                     </div>
                     <div id="Checkout_area_hr">
-                        <img src="./images/shopping_cart/hr.svg" alt="">
+                        <!-- <img src="./images/shopping_cart/hr.svg" alt=""> -->
                     </div>
                     <div id="Checkout_area_total">
                         <div id="Checkout_area_total_div">
