--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -65,7 +65,8 @@
                         </div>
                     </div>
                     <div id="Checkout_area_product_display_hr1">
-                        <img src="./images/shopping_cart/hr.svg" alt="">
+                        <div id="Checkout_area_product_display_hr1_hr"></div>
+                        <!-- <img src="./images/shopping_cart/hr.svg" alt=""> -->
                     </div>
                 </div>
 
@@ -101,7 +102,8 @@
                         <div id="checkout_block"></div>
                     </div>
                     <div id="Checkout_area_product_display_hr_2">
-                        <img src="./images/shopping_cart/hr.svg" alt="">
+                      <div id="Checkout_area_product_display_hr_2_hr"></div>
+                        <!-- <img src="./images/shopping_cart/hr.svg" alt=""> -->
                     </div>
                 </div>
 
@@ -143,7 +145,7 @@
                 <div id="Checkout_area_btn_box">
                     <div id="Checkout_area_box">
                         <a href="./shop.html" id="Checkout_area_box_a1"><img
-                                src="./images/shopping_cart/Continue_shopping.svg" alt=""></a>
+                                src="./images/shopping_cart/Continue_shopping.svg" alt="" id="Checkout_area_box_a1_img"></a>
                         <a href="./shopping_cart_two.html" id="Checkout_area_box_a2"><img
                                 src="./images/shopping_cart/Checkout.svg" alt=""></a>
                     </div>
