0909Chocolate_custom_screen4

--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -102,7 +102,7 @@
                         <div id="checkout_block"></div>
                     </div>
                     <div id="Checkout_area_product_display_hr_2">
-                      <div id="Checkout_area_product_display_hr_2_hr"></div>
+                        <div id="Checkout_area_product_display_hr_2_hr"></div>
                         <!-- <img src="./images/shopping_cart/hr.svg" alt=""> -->
                     </div>
                 </div>
@@ -145,7 +145,8 @@
                 <div id="Checkout_area_btn_box">
                     <div id="Checkout_area_box">
                         <a href="./shop.html" id="Checkout_area_box_a1"><img
-                                src="./images/shopping_cart/Continue_shopping.svg" alt="" id="Checkout_area_box_a1_img"></a>
+                                src="./images/shopping_cart/Continue_shopping.svg" alt=""
+                                id="Checkout_area_box_a1_img"></a>
                         <a href="./shopping_cart_two.html" id="Checkout_area_box_a2"><img
                                 src="./images/shopping_cart/Checkout.svg" alt=""></a>
                     </div>
