0910Chocolate_custom_screen2

--- a/shopping_cart_two.html
+++ b/shopping_cart_two.html
@@ -55,7 +55,7 @@
                                 <div id="full_list_box_left_box1_content_class2">
                                     <div class="full_list_box_left_box1_content_text">
                                         <p class="full_list_box_left_box1_content_text_special">*</p>
-                                        <p class="classusename">電話</p>
+                                        <p class="classusename">聯絡電話</p>
                                     </div>
                                     <div>
                                         <input type="text" placeholder="例:0912345678"
